--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2018"
 [dependencies]
 nom = "5.0.0"
 inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm8-0" }
+snafu = "0.6.0"
