--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2018"
 [dependencies]
 nom = "5.0.0"
 inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm8-0" }
-snafu = "0.6.0"
+err-derive = "0.2.1"
