--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,14 @@ version = "0.1.0"
 authors = ["IGI-111 <igi-111@protonmail.com>"]
 edition = "2018"
 
+[lib]
+name = "jack_lang"
+path = "src/lib.rs"
+
+[[bin]]
+name = "jack"
+path = "src/bin.rs"
+
 [dependencies]
 nom = "5.0.0"
 inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm8-0" }
